--- a/client/src/components/Draggable/Draggable.css
+++ b/client/src/components/Draggable/Draggable.css
@@ -36,7 +36,8 @@
   /* cursor         : move; */
   display        : flex;
   justify-content: space-between;
-  /* color: red; */
+  touch-action   : none;
+  /* color       : red; */
 }
 
 .collapse-arrows {
