--- a/client/src/components/MobileNav/MobileNav.css
+++ b/client/src/components/MobileNav/MobileNav.css
@@ -13,7 +13,7 @@
 }
 
 .MobileNav button {
-    flex: 1;
+    flex: 1 1 auto;
 }
 
 /* .greeting {
